paper: added stray commits to TYPES 2022 bibliography

--- a/paper/types-2022-postproceedings/types-2022-postproceedings.bib
+++ b/paper/types-2022-postproceedings/types-2022-postproceedings.bib
@@ -20,6 +20,135 @@
   year = 1995
 }
 
+@article{DBLP:journals/software/ShapiroH02,
+  author    = {Jonathan S. Shapiro and
+               Norman Hardy},
+  title     = {{EROS:} {A} Principle-Driven Operating System from the Ground Up},
+  journal   = {{IEEE} Softw.},
+  volume    = {19},
+  number    = {1},
+  pages     = {26--33},
+  year      = {2002},
+  url       = {https://doi.org/10.1109/52.976938},
+  doi       = {10.1109/52.976938},
+  timestamp = {Mon, 08 Jun 2020 22:31:45 +0200},
+  biburl    = {https://dblp.org/rec/journals/software/ShapiroH02.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/itp/AbrahamssonMKS22,
+  author    = {Oskar Abrahamsson and
+               Magnus O. Myreen and
+               Ramana Kumar and
+               Thomas Sewell},
+  editor    = {June Andronick and
+               Leonardo de Moura},
+  title     = {Candle: {A} Verified Implementation of {HOL} Light},
+  booktitle = {13th International Conference on Interactive Theorem Proving, {ITP}
+               2022, August 7-10, 2022, Haifa, Israel},
+  series    = {LIPIcs},
+  volume    = {237},
+  pages     = {3:1--3:17},
+  publisher = {Schloss Dagstuhl - Leibniz-Zentrum f{\"{u}}r Informatik},
+  year      = {2022},
+  url       = {https://doi.org/10.4230/LIPIcs.ITP.2022.3},
+  doi       = {10.4230/LIPIcs.ITP.2022.3},
+  timestamp = {Thu, 29 Sep 2022 08:36:57 +0200},
+  biburl    = {https://dblp.org/rec/conf/itp/AbrahamssonMKS22.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/sp/RajunasHBFL86,
+  author    = {S. A. Rajunas and
+               Norman Hardy and
+               Allen C. Bomberger and
+               William S. Frantz and
+               Charles R. Landau},
+  title     = {Security in {KeyKOS}{\texttrademark}},
+  booktitle = {Proceedings of the 1986 {IEEE} Symposium on Security and Privacy,
+               Oakland, California, USA, April 7-9, 1986},
+  pages     = {78--85},
+  publisher = {{IEEE} Computer Society},
+  year      = {1986},
+  url       = {https://doi.org/10.1109/SP.1986.10000},
+  doi       = {10.1109/SP.1986.10000},
+  timestamp = {Wed, 16 Oct 2019 14:14:51 +0200},
+  biburl    = {https://dblp.org/rec/conf/sp/RajunasHBFL86.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/sigops/Hardy85,
+  author    = {Norman Hardy},
+  title     = {{KeyKOS} Architecture},
+  journal   = {{ACM} {SIGOPS} Oper. Syst. Rev.},
+  volume    = {19},
+  number    = {4},
+  pages     = {8--25},
+  year      = {1985},
+  url       = {https://doi.org/10.1145/858336.858337},
+  doi       = {10.1145/858336.858337},
+  timestamp = {Tue, 14 Jul 2020 14:25:49 +0200},
+  biburl    = {https://dblp.org/rec/journals/sigops/Hardy85.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/sosp/KleinEHACDEEKNSTW09,
+  author    = {Gerwin Klein and
+               Kevin Elphinstone and
+               Gernot Heiser and
+               June Andronick and
+               David Cock and
+               Philip Derrin and
+               Dhammika Elkaduwe and
+               Kai Engelhardt and
+               Rafal Kolanski and
+               Michael Norrish and
+               Thomas Sewell and
+               Harvey Tuch and
+               Simon Winwood},
+  editor    = {Jeanna Neefe Matthews and
+               Thomas E. Anderson},
+  title     = {{seL4}: formal verification of an {OS} kernel},
+  booktitle = {Proceedings of the 22nd {ACM} Symposium on Operating Systems Principles
+               2009, {SOSP} 2009, Big Sky, Montana, USA, October 11-14, 2009},
+  pages     = {207--220},
+  publisher = {{ACM}},
+  year      = {2009},
+  url       = {https://doi.org/10.1145/1629575.1629596},
+  doi       = {10.1145/1629575.1629596},
+  timestamp = {Sun, 02 Oct 2022 16:15:55 +0200},
+  biburl    = {https://dblp.org/rec/conf/sosp/KleinEHACDEEKNSTW09.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/sp/NienhuisJBFR0NN20,
+  author    = {Kyndylan Nienhuis and
+               Alexandre Joannou and
+               Thomas Bauereiss and
+               Anthony C. J. Fox and
+               Michael Roe and
+               Brian Campbell and
+               Matthew Naylor and
+               Robert M. Norton and
+               Simon W. Moore and
+               Peter G. Neumann and
+               Ian Stark and
+               Robert N. M. Watson and
+               Peter Sewell},
+  title     = {Rigorous engineering for hardware security: Formal modelling and proof
+               in the {CHERI} design and implementation process},
+  booktitle = {2020 {IEEE} Symposium on Security and Privacy, {SP} 2020, San Francisco,
+               CA, USA, May 18-21, 2020},
+  pages     = {1003--1020},
+  publisher = {{IEEE}},
+  year      = {2020},
+  url       = {https://doi.org/10.1109/SP40000.2020.00055},
+  doi       = {10.1109/SP40000.2020.00055},
+  timestamp = {Thu, 23 Jun 2022 19:55:24 +0200},
+  biburl    = {https://dblp.org/rec/conf/sp/NienhuisJBFR0NN20.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
 @inproceedings{DBLP:conf/csl/MoserZ03,
   author    = {Georg Moser and
                Richard Zach},
@@ -96,7 +225,7 @@
 
 @inproceedings{DBLP:conf/lics/Reynolds02,
   author    = {John C. Reynolds},
-  title     = {Separation Logic: {A} Logic for Shared Mutable Data Structures},
+  title     = {{Separation Logic}: {A} Logic for Shared Mutable Data Structures},
   booktitle = {17th {IEEE} Symposium on Logic in Computer Science {(LICS} 2002),
                22-25 July 2002, Copenhagen, Denmark, Proceedings},
   pages     = {55--74},
@@ -128,7 +257,7 @@
 
 @article{DBLP:journals/jfp/Brady13,
   author    = {Edwin C. Brady},
-  title     = {Idris, a general-purpose dependently typed programming language: Design
+  title     = {{Idris}, a general-purpose dependently typed programming language: Design
                and implementation},
   journal   = {J. Funct. Program.},
   volume    = {23},
@@ -146,7 +275,7 @@
   author    = {Edwin C. Brady},
   editor    = {Anders M{\o}ller and
                Manu Sridharan},
-  title     = {Idris 2: Quantitative Type Theory in Practice},
+  title     = {{Idris 2}: {Quantitative Type Theory} in Practice},
   booktitle = {35th European Conference on Object-Oriented Programming, {ECOOP} 2021,
                July 11-17, 2021, Aarhus, Denmark (Virtual Conference)},
   series    = {LIPIcs},
@@ -167,8 +296,8 @@
                Klaus Havelund and
                Gerard J. Holzmann and
                Rajeev Joshi},
-  title     = {The OpenTheory Standard Theory Library},
-  booktitle = {{NASA} Formal Methods - Third International Symposium, {NFM} 2011,
+  title     = {The {OpenTheory} Standard Theory Library},
+  booktitle = {{NASA} Formal Methods --- Third International Symposium, {NFM} 2011,
                Pasadena, CA, USA, April 18-20, 2011. Proceedings},
   series    = {Lecture Notes in Computer Science},
   volume    = {6617},
@@ -187,7 +316,7 @@
                Joe Hurd},
   editor    = {Lennart Beringer and
                Amy P. Felty},
-  title     = {Standalone Tactics Using OpenTheory},
+  title     = {Standalone Tactics Using {OpenTheory}},
   booktitle = {Interactive Theorem Proving - Third International Conference, {ITP}
                2012, Princeton, NJ, USA, August 13-15, 2012. Proceedings},
   series    = {Lecture Notes in Computer Science},
@@ -238,7 +367,7 @@
                Zhong Shao},
   editor    = {Paul Hudak and
                Stephanie Weirich},
-  title     = {VeriML: typed computation of logical terms inside a language with
+  title     = {{VeriML}: typed computation of logical terms inside a language with
                effects},
   booktitle = {Proceeding of the 15th {ACM} {SIGPLAN} international conference on
                Functional programming, {ICFP} 2010, Baltimore, Maryland, USA, September
@@ -255,7 +384,7 @@
 
 @phdthesis{DBLP:phd/dnb/Jung20,
   author    = {Ralf Jung},
-  title     = {Understanding and evolving the Rust programming language},
+  title     = {Understanding and evolving the {Rust} programming language},
   school    = {Saarland University, Saarbr{\"{u}}cken, Germany},
   year      = {2020},
   url       = {https://publikationen.sulb.uni-saarland.de/handle/20.500.11880/29647},
@@ -266,7 +395,7 @@
 }
 
 @article{Bruijn1972LambdaCN,
-  title={Lambda calculus notation with nameless dummies, a tool for automatic formula manipulation, with application to the Church-Rosser theorem},
+  title={Lambda calculus notation with nameless dummies, a tool for automatic formula manipulation, with application to the {Church-Rosser} theorem},
   author={de Ng Dick Bruijn},
   journal={Studies in logic and the foundations of mathematics},
   year={1972},
@@ -277,7 +406,7 @@
 @book{DBLP:books/daglib/0019512,
   author    = {Andrew S. Tanenbaum and
                Albert S. Woodhull},
-  title     = {Operating systems - design and implementation, 3rd Edition},
+  title     = {Operating systems---design and implementation, 3rd Edition},
   publisher = {Pearson Education},
   year      = {2006},
   isbn      = {978-0-13-142938-3},
@@ -380,7 +509,7 @@
                J. F. Bastien},
   editor    = {Albert Cohen and
                Martin T. Vechev},
-  title     = {Bringing the web up to speed with WebAssembly},
+  title     = {Bringing the web up to speed with {WebAssembly}},
   booktitle = {Proceedings of the 38th {ACM} {SIGPLAN} Conference on Programming
                Language Design and Implementation, {PLDI} 2017, Barcelona, Spain,
                June 18-23, 2017},
@@ -444,6 +573,22 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
+@incollection{DBLP:reference/crypt/Necula11,
+  author    = {George C. Necula},
+  editor    = {Henk C. A. van Tilborg and
+               Sushil Jajodia},
+  title     = {Proof-Carrying Code},
+  booktitle = {Encyclopedia of Cryptography and Security, 2nd Ed},
+  pages     = {984--986},
+  publisher = {Springer},
+  year      = {2011},
+  url       = {https://doi.org/10.1007/978-1-4419-5906-5\_864},
+  doi       = {10.1007/978-1-4419-5906-5\_864},
+  timestamp = {Wed, 12 Jul 2017 09:11:26 +0200},
+  biburl    = {https://dblp.org/rec/reference/crypt/Necula11.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
 @inproceedings{DBLP:conf/cade/AllenCEKL00,
   author    = {Stuart F. Allen and
                Robert L. Constable and
@@ -466,4 +611,4 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{10.1007/s00165-019-00492-1, author = {Paulson, Lawrence C. and Nipkow, Tobias and Wenzel, Makarius}, title = {From LCF to Isabelle/HOL}, year = {2019}, issue_date = {Dec 2019}, publisher = {Springer-Verlag}, address = {Berlin, Heidelberg}, volume = {31}, number = {6}, issn = {0934-5043}, url = {https://doi.org/10.1007/s00165-019-00492-1}, doi = {10.1007/s00165-019-00492-1}, abstract = {Interactive theorem provers have developed dramatically over the past four decades, from primitive beginnings to today’s powerful systems. Here, we focus on Isabelle/HOL and its distinctive strengths. They include automatic proof search, borrowing techniques from the world of first order theorem proving, but also the automatic search for counterexamples. They include a highly readable structured language of proofs and a unique interactive development environment for editing live proof documents. Everything rests on the foundation conceived by Robin Milner for Edinburgh LCF: a proof kernel, using abstract types to ensure soundness and eliminate the need to store proofs. Compared with the research prototypes of the 1970s, Isabelle is a practical and versatile tool. It is used by system designers, mathematicians and many others.}, journal = {Form. Asp. Comput.}, month = {dec}, pages = {675–698}, numpages = {24}, keywords = {LCF, Interactive theorem proving, HOL, Isabelle} }
+@article{10.1007/s00165-019-00492-1, author = {Paulson, Lawrence C. and Nipkow, Tobias and Wenzel, Makarius}, title = {From {LCF} to {Isabelle/HOL}}, year = {2019}, issue_date = {Dec 2019}, publisher = {Springer-Verlag}, address = {Berlin, Heidelberg}, volume = {31}, number = {6}, issn = {0934-5043}, url = {https://doi.org/10.1007/s00165-019-00492-1}, doi = {10.1007/s00165-019-00492-1}, abstract = {Interactive theorem provers have developed dramatically over the past four decades, from primitive beginnings to today’s powerful systems. Here, we focus on Isabelle/HOL and its distinctive strengths. They include automatic proof search, borrowing techniques from the world of first order theorem proving, but also the automatic search for counterexamples. They include a highly readable structured language of proofs and a unique interactive development environment for editing live proof documents. Everything rests on the foundation conceived by Robin Milner for Edinburgh LCF: a proof kernel, using abstract types to ensure soundness and eliminate the need to store proofs. Compared with the research prototypes of the 1970s, Isabelle is a practical and versatile tool. It is used by system designers, mathematicians and many others.}, journal = {Form. Asp. Comput.}, month = {dec}, pages = {675–698}, numpages = {24}, keywords = {LCF, Interactive theorem proving, HOL, Isabelle} }
