paper: camera-ready copy draft for TYPES post-proceedings

--- a/paper/types-2022-postproceedings/types-2022-postproceedings.bib
+++ b/paper/types-2022-postproceedings/types-2022-postproceedings.bib
@@ -20,6 +20,19 @@
   year = 1995
 }
 
+@incollection{10.1093/oso/9780198501275.003.0013,
+	author = {Pollack, Robert},
+    isbn = {9780198501275},
+    title = {How to believe a machine-checked proof},
+    booktitle = {Twenty Five Years of {Constructive Type Theory}},
+    publisher = {Oxford University Press},
+    year = {1998},
+    month = {10},
+}
+
+
+
+
 @article{DBLP:journals/software/ShapiroH02,
   author    = {Jonathan S. Shapiro and
                Norman Hardy},
@@ -332,12 +345,11 @@
 }
 
 @misc { arm-vmsa,
-  author = {Arm},
+  author = {{Arm Holdings, Ltd.}},
   howpublished = {\url{https://developer.arm.com/documentation/ddi0406/b/System-Level-Architecture/Virtual-Memory-System-Architecture--VMSA-}},
   title = {{AArch64} virtual memory system architecture},
-  note = {Arm virtual memory system architecture},
-  note = {Accessed November $7^\mathrm{th}$ 2022},
-  year = {2022}
+  note = {Accessed $1^\mathrm{st}$ May 2023},
+  year = {2023}
 }
 
 @article{10.1145/2490301.2451167, author = {Madhavapeddy, Anil and Mortier, Richard and Rotsos, Charalampos and Scott, David and Singh, Balraj and Gazagnaire, Thomas and Smith, Steven and Hand, Steven and Crowcroft, Jon}, title = {Unikernels: Library Operating Systems for the Cloud}, year = {2013}, issue_date = {March 2013}, publisher = {Association for Computing Machinery}, address = {New York, NY, USA}, volume = {41}, number = {1}, issn = {0163-5964}, url = {https://doi.org/10.1145/2490301.2451167}, doi = {10.1145/2490301.2451167}, abstract = {We present unikernels, a new approach to deploying cloud services via applications written in high-level source code. Unikernels are single-purpose appliances that are compile-time specialised into standalone kernels, and sealed against modification when deployed to a cloud platform. In return they offer significant reduction in image sizes, improved efficiency and security, and should reduce operational costs. Our Mirage prototype compiles OCaml code into unikernels that run on commodity clouds and offer an order of magnitude reduction in code size without significant performance penalty. The architecture combines static type-safety with a single address-space layout that can be made immutable via a hypervisor extension. Mirage contributes a suite of type-safe protocol libraries, and our results demonstrate that the hypervisor is a platform that overcomes the hardware compatibility issues that have made past library operating systems impractical to deploy in the real-world.}, journal = {SIGARCH Comput. Archit. News}, month = {mar}, pages = {461–472}, numpages = {12}, keywords = {hypervisor, microkernel, functional programming} }
